@@ -17,8 +17,29 @@ extern dfsch_object_t* dfsch_make_string_buf(char* ptr, size_t len);
 extern char* dfsch_string_to_cstr(dfsch_object_t* obj);
 extern dfsch_strbuf_t* dfsch_string_to_buf(dfsch_object_t* obj);
 
+extern int dfsch_string_cmp(dfsch_object_t* a, dfsch_object_t* b);
 extern int dfsch_string_eq_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_lt_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_gt_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_lte_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_gte_p(dfsch_object_t* a, dfsch_object_t* b);
 
-// TODO: some basic opertations: concatenation, indexing...
+extern int dfsch_string_cmp_ci(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_ci_eq_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_ci_lt_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_ci_gt_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_ci_lte_p(dfsch_object_t* a, dfsch_object_t* b);
+extern int dfsch_string_ci_gte_p(dfsch_object_t* a, dfsch_object_t* b);
+
+extern dfsch_object_t* dfsch_string_list_append(dfsch_object_t* list);
+
+extern char dfsch_string_ref(dfsch_object_t* string, size_t index);
+
+extern size_t dfsch_string_length(dfsch_object_t* string);
+
+extern dfsch_object_t* dfsch_string_substring(dfsch_object_t* string, 
+                                              size_t start,
+                                              size_t end);
+
 
 #endif
